Can now parse json file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,9 @@ find_package(Qt5 COMPONENTS Gui REQUIRED)
 
 # EDIT: add your (non-test) source files to this list
 set(src
-  
+  geometry.hpp geometry.cpp
+  json.hpp json.cpp
+  png.hpp png.cpp
   )
 
 # EDIT: add any additional test source files to this list
@@ -27,11 +29,21 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
 
 # create unittests
 add_executable(unittests catch.hpp ${test_src} ${src})
-target_link_libraries(unittests Qt5::Gui)
+
+if(UNIX AND CMAKE_COMPILER_IS_GNUCXX)
+  target_link_libraries(unittests Qt5::Gui pthread)
+else(UNIX AND CMAKE_COMPILER_IS_GNUCXX)  
+  target_link_libraries(unittests Qt5::Gui)
+endif()
 
 # create the vtray executable
 add_executable(vtray vtray.cpp ${src})
-target_link_libraries(vtray Qt5::Gui)
+
+if(UNIX AND CMAKE_COMPILER_IS_GNUCXX)
+  target_link_libraries(vtray Qt5::Gui pthread)
+else(UNIX AND CMAKE_COMPILER_IS_GNUCXX)  
+  target_link_libraries(vtray Qt5::Gui)
+endif()
 
 enable_testing()
 
